.- Fix config screen overflow style

--- a/UI/UserInterface/wwwroot/css/site.css
+++ b/UI/UserInterface/wwwroot/css/site.css
@@ -407,3 +407,9 @@ button {
 .float-end {
 	margin-left: 90%;
 }
+
+.config-container {
+	overflow: auto;
+	height: 70vh;
+	padding: 0px 10px
+}
